# project-analyzer

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  code_parser.py  dev.py  diagram_generator.py  diagram_generator_mermaid.py  file_scanner.py  github_fetcher.py  llm_client.py  models.py  service.py  settings.py  tech_stack_analyzer.py  text_loader.py
tests/: test_api_analyze_local.py  test_code_parser.py  test_diagram_generator.py  test_file_scanner.py  test_mermaid_diagram_generator.py  test_service.py  test_tech_stack_analyzer.py  test_text_loader.py
